# spooknix

./: .env.brev.example  .gitignore  .mcp.json  Dockerfile  GEMINI.md  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: action.yml  ci.yml  nix-ci.yml  notify.yml  rust.yml  sast.yml  sbom.yml  scorecard.yml  secrets.yml  security.yml  supply-chain.yml  update-lock.yml  vuln.yml  zizmor.yml
deploy/: BREV.md
nix/: package.nix
nix/modules/home-manager/: default.nix
nix/modules/nixos/: default.nix
scripts/: brev-launch.sh  brev-smoke.sh  ebpf-audio-debug.bt
secrets/: secrets.yaml
src/: audio_pipeline.py  cli.py  diarizer.py  gui.py  llm_client.py  mcp_tool.py  metrics.py  orchestrator.py  recorder.py  server.py  transcriber.py  tts_client.py
tests/: test_cli_record.py  test_recorder.py
