[project]
name = "spooknix"
version = "0.1.0"
description = "Privacy-first Speech-to-Text Engine"
authors = [
    {name = "VoidNxLabs",email = "voidnx@labs"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
